Various fixes, now at least the c file is valid